# AlumnoColaborador

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: competencias.json  data.json  kahootLinks.txt  main.py  metainformacion preguntas.docx
