[project]
name = "mi-proyecto"
version = "0.1.0"
description = "App"
requires-python = ">=3.11"
dependencies = [
    "pymongo==4.10.1",
    "minio==7.2.9",
    "requests==2.32.3",
    "openai>=1.0.0",
    "python-docx>=1.1.0",
    "pdfplumber>=0.11.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "python-multipart>=0.0.9" # documentos en fast api
]

[tool.uv]
package = false
